[project]
name = "bitwarden-rest-client"
version = "0.1.0"
description = "A rest client for the Bitwarden Cli API"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "Kalle M. Aagaard", email = "git@k-moeller.dk"},
]
maintainers = [
    {name = "Kalle M. Aagaard", email = "git@k-moeller.dk"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/KalleDK/py-bitwarden-rest-client"
Documentation = "https://github.com/KalleDK/py-bitwarden-rest-client"
Repository = "https://github.com/KalleDK/py-bitwarden-rest-client.git"

[dependency-groups]
test = [
    "pytest>=8.4.2",
]
stubs = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bitwarden_rest_client"]

[tool.pyright]
include = ["src", "tests", "examples"]
typeCheckingMode = "strict"
exclude = ["**/__pycache__"]
pythonVersion = "3.14"

[tool.ruff]
line-length = 120
target-version = "py314"
